[gd_scene load_steps=14 format=3 uid="uid://bgn7dn0hxqa60"]

[ext_resource type="Script" uid="uid://6aqfoyeiifwg" path="res://scenes/ui/UI by jer/scripts/main_menu.gd" id="1_ey8fa"]
[ext_resource type="Texture2D" uid="uid://htl1xhda2x6v" path="res://scenes/ui/UI by jer/used in UI/84bb17a4-db7a-4f17-b1fa-f860766f7163.jpeg" id="2_o08tu"]
[ext_resource type="FontFile" uid="uid://r31pruqk51m3" path="res://scenes/ui/UI by jer/used in UI/Super Maples.ttf" id="3_adqss"]
[ext_resource type="Script" uid="uid://dyq85je2d7iv2" path="res://scenes/ui/UI by jer/scripts/audio_control.gd" id="5_adqss"]
[ext_resource type="Script" uid="uid://bofb3p2uunbxu" path="res://scenes/ui/UI by jer/scripts/fullscreen_control.gd" id="6_y3fev"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_igplx"]
texture = ExtResource("2_o08tu")
modulate_color = Color(0.281187, 0.281187, 0.281187, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmh7l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmh7l"]
bg_color = Color(0.804743, 0.804743, 0.804743, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5agq"]
bg_color = Color(0.43134, 0.43134, 0.43134, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_igplx"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_o08tu"]
color = Color(1, 1, 1, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_adqss"]
color = Color(0.225191, 0.494635, 0.896294, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_y3fev"]
color = Color(0.0980886, 0.317864, 0.711954, 1)
thickness = 4

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 5.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_ey8fa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -639.5
offset_top = -360.5
offset_right = 639.5
offset_bottom = 360.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_igplx")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 59.0
offset_bottom = 214.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("3_adqss")
theme_override_font_sizes/font_size = 120
text = "Case No Zero"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mainbuttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -602.0
offset_top = 37.5
offset_right = 602.0
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 120

[node name="start" type="Button" parent="mainbuttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_adqss")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_mmh7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_mmh7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5agq")
theme_override_styles/normal = SubResource("StyleBoxFlat_igplx")
text = "Start Game"

[node name="options" type="Button" parent="mainbuttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_adqss")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_mmh7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_mmh7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5agq")
theme_override_styles/normal = SubResource("StyleBoxFlat_igplx")
text = "Options"

[node name="exit" type="Button" parent="mainbuttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_adqss")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_mmh7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_mmh7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5agq")
theme_override_styles/normal = SubResource("StyleBoxFlat_igplx")
text = "Exit
"

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.5
offset_top = -103.5
offset_right = 249.5
offset_bottom = 245.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_adqss")
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 73.5
offset_right = 88.0
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_adqss")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_mmh7l")
theme_override_styles/hover = SubResource("StyleBoxFlat_mmh7l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5agq")
theme_override_styles/normal = SubResource("StyleBoxFlat_igplx")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.5
offset_top = -91.5
offset_right = 195.5
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_adqss")
theme_override_font_sizes/font_size = 20
text = " Master volume"

[node name="Audio Control" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_o08tu")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_adqss")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_y3fev")
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("5_adqss")
audio_bus_name = "Master"

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Fullscreen Control" type="CheckButton" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_adqss")
theme_override_font_sizes/font_size = 20
text = "FULLSCREEN"
script = ExtResource("6_y3fev")

[connection signal="pressed" from="mainbuttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="mainbuttons/options" to="." method="_on_option_pressed"]
[connection signal="pressed" from="mainbuttons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/Audio Control" to="Options/VBoxContainer/HBoxContainer/Audio Control" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/HBoxContainer2/Fullscreen Control" to="Options/VBoxContainer/HBoxContainer2/Fullscreen Control" method="_on_toggled"]
